# banjo-midison

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-17-mcp-server.md  2026-04-28-voice-leading.md
docs/superpowers/specs/: 2026-04-28-voice-leading-design.md
src/banjo/: __init__.py  config.py  corpus.py  mcp_server.py  midi_writer.py  theory.py  voice_leading.py  voicings.py
tests/: test_config.py  test_mcp_server.py  test_midi_writer.py  test_theory.py  test_voice_leading.py  test_voicings.py
