[project]
name = "banjo"
version = "0.1.0"
description = "MIDI chord progression generator from Roman numeral analysis. Phase 1: theory layer + test corpus."
requires-python = ">=3.11"
dependencies = [
    "mido>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
banjo-corpus = "banjo.corpus:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/banjo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
